<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PlanAlimentacionCreate">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/lightGrey"
            android:layout_marginEnd="10dp"
            android:text="@string/crear_plan_de_alimentacion"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lunes"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/lightGrey"
            android:backgroundTint="@color/lightGrey"
            app:suffixText="@string/sufix_alimentacion"
            app:suffixTextColor="@color/lightGrey"
            android:hint="@string/lunes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lunes_text"
                android:layout_width="match_parent"
                android:textColor="@color/lightGrey"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/martes"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lunes"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:suffixText="@string/sufix_alimentacion"
            app:suffixTextColor="@color/lightGrey"
            android:textColorHint="@color/lightGrey"
            android:hint="@string/martes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/martes_text"
                android:layout_width="match_parent"
                android:textColor="@color/lightGrey"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/miercoles"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/martes"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/lightGrey"
            app:suffixText="@string/sufix_alimentacion"
            app:suffixTextColor="@color/lightGrey"
            android:hint="@string/miercoles">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/miercoles_text"
                android:layout_width="match_parent"
                android:textColor="@color/lightGrey"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jueves"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/miercoles"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/lightGrey"
            app:suffixText="@string/sufix_alimentacion"
            app:suffixTextColor="@color/lightGrey"
            android:hint="@string/jueves">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jueves_text"
                android:layout_width="match_parent"
                android:textColor="@color/lightGrey"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/viernes"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/jueves"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/lightGrey"
            app:suffixText="@string/sufix_alimentacion"
            app:suffixTextColor="@color/lightGrey"
            android:hint="@string/viernes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/viernes_text"
                android:layout_width="match_parent"
                android:textColor="@color/lightGrey"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sabado"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viernes"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/lightGrey"
            app:suffixText="@string/sufix_alimentacion"
            app:suffixTextColor="@color/lightGrey"
            android:hint="@string/sabado">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sabado_text"
                android:layout_width="match_parent"
                android:textColor="@color/lightGrey"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/domingo"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sabado"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/lightGrey"
            app:suffixText="@string/sufix_alimentacion"
            app:suffixTextColor="@color/lightGrey"
            android:hint="@string/domingo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/domingo_text"
                android:layout_width="match_parent"
                android:textColor="@color/lightGrey"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/semanas"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/domingo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/lightGrey"
            android:hint="@string/numero_de_semanas">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/semana_text"
                android:layout_width="match_parent"
                android:textColor="@color/lightGrey"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/semanas"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/crear_nuevo_plan"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/crear"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/cancelar"
            android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>