...
                android:textColor="@color/lightGrey"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/title_plan_ali"
                />
            <Button
                android:id="@+id/plan_alimentacion"
                android:text="Ver mas"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@+id/plan_ali_duration_text"/>
...
